# edtr

./: Cargo.toml  README.md
edtr-log/: Cargo.toml
edtr-log/src/: lib.rs
edtr-tauri/: package-lock.json  package.json
edtr-tauri/bindings/: EDTRConfig.ts  EDTRPlugins.ts  PluginConfig.ts  PluginType.ts  ThemeColours.json
edtr-tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  windows.wxs
edtr-tauri/src-tauri/plugins/edtr-theme/: config.json  edtr-dark.json
edtr-tauri/src-tauri/src/: cli.rs  macros.rs  main.rs
edtr-tauri/src-tauri/src/config/: mod.rs
edtr-tauri/src-tauri/src/plugins/: mod.rs  theme.rs
edtr-ui/: package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
edtr-ui/src/: App.svelte  Splash.svelte  global.css  main.ts  theme.scss  tree.ts
edtr-ui/src/components/: Workspace.svelte
edtr-ui/src/components/tree/: Tree.svelte  TreeSplit.svelte
edtr-ui/src/components/views/: GradientViewComponent.svelte  RangeViewComponent.svelte
edtr-ui/src/types/: EDTRTheme.ts  ThemeColours.json  ThemeColours.ts  ThemeType.ts
edtr-ui/src/utils/: setThemeColors.ts
edtr-view/: Cargo.toml  README.md
edtr-view/src/: lib.rs  shader.wgsl
