[package]
name = "edtr-log"
version = "0.1.0"
authors = ["@DexterHill0", "@FlowVix ", "@Spu7Nix"]
edition = "2021"
description = "Crate used to customise the logger. Designed to work on both the target architecture, as well as wasm."
repository = "https://github.com/FlowVix/EDTR"
license = "MIT"

[dependencies]
log = { version = "0.4.6", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"